add to SwaggerParser
