# api/swagger/petStore.json
@@ -37,25 +37,16 @@
       }
     }
   ],
-  "schemes": [
-    "https",
-    "http"
-  ],
+  "schemes": ["https", "http"],
   "paths": {
     "/pet/{petId}/uploadImage": {
       "post": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "uploads an image",
         "description": "",
         "operationId": "uploadFile",
-        "consumes": [
-          "multipart/form-data"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "consumes": ["multipart/form-data"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "petId",
@@ -102,30 +93,19 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ]
       }
     },
     "/pet": {
       "post": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Add a new pet to the store",
         "description": "",
         "operationId": "addPet",
-        "consumes": [
-          "application/json",
-          "application/xml"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json", "application/xml"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "in": "body",
@@ -134,10 +114,7 @@
             "required": true,
             "schema": {
               "type": "object",
-              "required": [
-                "name",
-                "photoUrls"
-              ],
+              "required": ["name", "photoUrls"],
               "properties": {
                 "id": {
                   "type": "integer",
@@ -198,11 +175,7 @@
                 "status": {
                   "type": "string",
                   "description": "pet status in the store",
-                  "enum": [
-                    "available",
-                    "pending",
-                    "sold"
-                  ]
+                  "enum": ["available", "pending", "sold"]
                 }
               },
               "xml": {
@@ -218,28 +191,17 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ]
       },
       "put": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Update an existing pet",
         "description": "",
         "operationId": "updatePet",
-        "consumes": [
-          "application/json",
-          "application/xml"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json", "application/xml"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "in": "body",
@@ -248,10 +210,7 @@
             "required": true,
             "schema": {
               "type": "object",
-              "required": [
-                "name",
-                "photoUrls"
-              ],
+              "required": ["name", "photoUrls"],
               "properties": {
                 "id": {
                   "type": "integer",
@@ -312,11 +271,7 @@
                 "status": {
                   "type": "string",
                   "description": "pet status in the store",
-                  "enum": [
-                    "available",
-                    "pending",
-                    "sold"
-                  ]
+                  "enum": ["available", "pending", "sold"]
                 }
               },
               "xml": {
@@ -338,26 +293,18 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ]
       }
     },
     "/pet/findByStatus": {
       "get": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Finds Pets by status",
         "description": "Multiple status values can be provided with comma separated strings",
         "operationId": "findPetsByStatus",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "status",
@@ -367,11 +314,7 @@
             "type": "array",
             "items": {
               "type": "string",
-              "enum": [
-                "available",
-                "pending",
-                "sold"
-              ],
+              "enum": ["available", "pending", "sold"],
               "default": "available"
             },
             "collectionFormat": "multi"
@@ -384,10 +327,7 @@
               "type": "array",
               "items": {
                 "type": "object",
-                "required": [
-                  "name",
-                  "photoUrls"
-                ],
+                "required": ["name", "photoUrls"],
                 "properties": {
                   "id": {
                     "type": "integer",
@@ -448,11 +388,7 @@
                   "status": {
                     "type": "string",
                     "description": "pet status in the store",
-                    "enum": [
-                      "available",
-                      "pending",
-                      "sold"
-                    ]
+                    "enum": ["available", "pending", "sold"]
                   }
                 },
                 "xml": {
@@ -467,26 +403,18 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ]
       }
     },
     "/pet/findByTags": {
       "get": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Finds Pets by tags",
         "description": "Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.",
         "operationId": "findPetsByTags",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "tags",
@@ -507,10 +435,7 @@
               "type": "array",
               "items": {
                 "type": "object",
-                "required": [
-                  "name",
-                  "photoUrls"
-                ],
+                "required": ["name", "photoUrls"],
                 "properties": {
                   "id": {
                     "type": "integer",
@@ -571,11 +496,7 @@
                   "status": {
                     "type": "string",
                     "description": "pet status in the store",
-                    "enum": [
-                      "available",
-                      "pending",
-                      "sold"
-                    ]
+                    "enum": ["available", "pending", "sold"]
                   }
                 },
                 "xml": {
@@ -590,10 +511,7 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ],
         "deprecated": true
@@ -601,16 +519,11 @@
     },
     "/pet/{petId}": {
       "get": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Find pet by ID",
         "description": "Returns a single pet",
         "operationId": "getPetById",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "petId",
@@ -626,10 +539,7 @@
             "description": "successful operation",
             "schema": {
               "type": "object",
-              "required": [
-                "name",
-                "photoUrls"
-              ],
+              "required": ["name", "photoUrls"],
               "properties": {
                 "id": {
                   "type": "integer",
@@ -690,11 +600,7 @@
                 "status": {
                   "type": "string",
                   "description": "pet status in the store",
-                  "enum": [
-                    "available",
-                    "pending",
-                    "sold"
-                  ]
+                  "enum": ["available", "pending", "sold"]
                 }
               },
               "xml": {
@@ -716,19 +622,12 @@
         ]
       },
       "post": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Updates a pet in the store with form data",
         "description": "",
         "operationId": "updatePetWithForm",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/x-www-form-urlencoded"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "petId",
@@ -760,24 +659,16 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ]
       },
       "delete": {
-        "tags": [
-          "pet"
-        ],
+        "tags": ["pet"],
         "summary": "Deletes a pet",
         "description": "",
         "operationId": "deletePet",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "api_key",
@@ -804,29 +695,19 @@
         },
         "security": [
           {
-            "petstore_auth": [
-              "write:pets",
-              "read:pets"
-            ]
+            "petstore_auth": ["write:pets", "read:pets"]
           }
         ]
       }
     },
     "/store/order": {
       "post": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Place an order for a pet",
         "description": "",
         "operationId": "placeOrder",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "in": "body",
@@ -855,11 +736,7 @@
                 "status": {
                   "type": "string",
                   "description": "Order Status",
-                  "enum": [
-                    "placed",
-                    "approved",
-                    "delivered"
-                  ]
+                  "enum": ["placed", "approved", "delivered"]
                 },
                 "complete": {
                   "type": "boolean"
@@ -896,11 +773,7 @@
                 "status": {
                   "type": "string",
                   "description": "Order Status",
-                  "enum": [
-                    "placed",
-                    "approved",
-                    "delivered"
-                  ]
+                  "enum": ["placed", "approved", "delivered"]
                 },
                 "complete": {
                   "type": "boolean"
@@ -919,16 +792,11 @@
     },
     "/store/order/{orderId}": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Find purchase order by ID",
         "description": "For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions",
         "operationId": "getOrderById",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "orderId",
@@ -966,11 +834,7 @@
                 "status": {
                   "type": "string",
                   "description": "Order Status",
-                  "enum": [
-                    "placed",
-                    "approved",
-                    "delivered"
-                  ]
+                  "enum": ["placed", "approved", "delivered"]
                 },
                 "complete": {
                   "type": "boolean"
@@ -990,16 +854,11 @@
         }
       },
       "delete": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Delete purchase order by ID",
         "description": "For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors",
         "operationId": "deleteOrder",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "orderId",
@@ -1023,15 +882,11 @@
     },
     "/store/inventory": {
       "get": {
-        "tags": [
-          "store"
-        ],
+        "tags": ["store"],
         "summary": "Returns pet inventories by status",
         "description": "Returns a map of status codes to quantities",
         "operationId": "getInventory",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -1054,19 +909,12 @@
     },
     "/user/createWithArray": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Creates list of users with given input array",
         "description": "",
         "operationId": "createUsersWithArrayInput",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "in": "body",
@@ -1122,19 +970,12 @@
     },
     "/user/createWithList": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Creates list of users with given input array",
         "description": "",
         "operationId": "createUsersWithListInput",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "in": "body",
@@ -1190,16 +1031,11 @@
     },
     "/user/{username}": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Get user by user name",
         "description": "",
         "operationId": "getUserByName",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "username",
@@ -1257,19 +1093,12 @@
         }
       },
       "put": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Updated user",
         "description": "This can only be done by the logged in user.",
         "operationId": "updateUser",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "username",
@@ -1330,16 +1159,11 @@
         }
       },
       "delete": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Delete user",
         "description": "This can only be done by the logged in user.",
         "operationId": "deleteUser",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "username",
@@ -1361,16 +1185,11 @@
     },
     "/user/login": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Logs user into the system",
         "description": "",
         "operationId": "loginUser",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "name": "username",
@@ -1414,16 +1233,11 @@
     },
     "/user/logout": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Logs out current logged in user session",
         "description": "",
         "operationId": "logoutUser",
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "produces": ["application/json", "application/xml"],
         "parameters": [],
         "responses": {
           "default": {
@@ -1434,19 +1248,12 @@
     },
     "/user": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Create user",
         "description": "This can only be done by the logged in user.",
         "operationId": "createUser",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json",
-          "application/xml"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json", "application/xml"],
         "parameters": [
           {
             "in": "body",
@@ -1547,10 +1354,7 @@
     },
     "Pet": {
       "type": "object",
-      "required": [
-        "name",
-        "photoUrls"
-      ],
+      "required": ["name", "photoUrls"],
       "properties": {
         "id": {
           "type": "integer",
@@ -1611,11 +1415,7 @@
         "status": {
           "type": "string",
           "description": "pet status in the store",
-          "enum": [
-            "available",
-            "pending",
-            "sold"
-          ]
+          "enum": ["available", "pending", "sold"]
         }
       },
       "xml": {
@@ -1659,11 +1459,7 @@
         "status": {
           "type": "string",
           "description": "Order Status",
-          "enum": [
-            "placed",
-            "approved",
-            "delivered"
-          ]
+          "enum": ["placed", "approved", "delivered"]
         },
         "complete": {
           "type": "boolean"
